--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,84 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+:root {
+  font-size: 16px;
+}
+
+body,
+html {
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Raleway", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-bottom: 1em;
+}
+
+p:last-child {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.25em;
+}
+
+p {
+  line-height: 1.5em;
+}
+
+.spd-1 {
+  padding: 1rem;
+}
+
+.spd-2 {
+  padding: 25rem 1rem;
+}
+
+.spd-3 {
+  padding: 3rem 1rem;
+}
+
+.spd-4 {
+  padding: 4rem 1rem;
+}
+
+.spd-5 {
+  padding: 5rem 1rem;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 #app {
-  max-width: 1280px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background: #000e1c;
+}
+
+.container {
+  max-width: 1140px;
   margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
 }
